--- a/style.css
+++ b/style.css
@@ -33,7 +33,7 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
-  background: #fff;
+  background: #f6f6f6;
   margin: 0;
 }
 
