--- a/style.css
+++ b/style.css
@@ -137,9 +137,8 @@ main.content {
 }
 
 main.content.active {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+  display: block;
+  text-align: center;
 }
 
 #chat {
