--- a/style.css
+++ b/style.css
@@ -152,6 +152,11 @@ main.content.active {
   overflow-y: auto;
   height: 500px;
   box-shadow: 0 0 10px rgba(0,0,0,0.1);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-end;
+  width: 100%;
 }
 #input {
   display: flex;
