--- a/style.css
+++ b/style.css
@@ -134,6 +134,10 @@ body {
 
 main.content {
   display: none;
+  text-align: left;
+}
+
+#main2 {
   flex-direction: column;
   align-items: center;   /* 横方向の中央寄せ */
   justify-content: center; /* 縦方向の中央寄せ */
