--- a/style.css
+++ b/style.css
@@ -134,12 +134,7 @@ body {
 
 main.content {
   display: none;
-  flex-direction: column;
-  align-items: center;   /* 横方向の中央寄せ */
-  justify-content: center; /* 縦方向の中央寄せ */
-  min-height: calc(100vh - 100px); /* ヘッダー分を引いた高さ */
-  padding: 20px;
-  text-align: center;
+  margin: auto;
 }
 
 main.content.active {
