--- a/style.css
+++ b/style.css
@@ -481,3 +481,11 @@ main.content.active {
 #score-list {
   display: none;
 }
+
+#name {
+  width: 200px;
+  height: 200px;
+  font-size: 80px;
+  border: black solid 2px;
+  border-radius: 50px;
+}
