--- a/style.css
+++ b/style.css
@@ -482,10 +482,9 @@ main.content.active {
   display: none;
 }
 
-#name {
-  width: 50px;
-  height: 50px;
-  font-size: 80px;
-  border: black solid 2px;
+#name, #text {
+  border: 1px solid #aaa;
   border-radius: 50px;
+  padding: 8px;
+  font-family: inherit;
 }
