--- a/style.css
+++ b/style.css
@@ -482,7 +482,7 @@ main.content.active {
   display: none;
 }
 
-#name, #text {
+#you_name {
   border: 1px solid #aaa;
   border-radius: 50px;
   padding: 8px;
