--- a/style.css
+++ b/style.css
@@ -486,8 +486,9 @@ main.content.active {
   border: 1px solid #aaa;
   border-radius: 50%;
   padding: 8px;
-  width: 60px;
-  height: 60px;
+  width: 40px;
+  height: 40px;
   font-family: inherit;
-  font-size: 40px;
+  font-size: 35px;
+  text-align: center;
 }
