--- a/style.css
+++ b/style.css
@@ -495,3 +495,47 @@ main.content.active {
   font-weight: bold;     /* 太字 */
   user-select: none;     /* 文字選択禁止（見た目が自然になる） */
 }
+
+/* ここから動画 */
+
+.video-list {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 10px;
+}
+
+.video-btn {
+  background-color: #004ec4;
+  border: 1px solid #00378a;
+  color: #fff;
+  padding: 10px 15px;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: 0.2s;
+}
+
+.video-btn:hover {
+  background-color: #007bff;
+}
+
+.video-container video {
+  width: 100%;
+  max-height: 450px;
+  border-radius: 10px;
+  margin-top: 10px;
+}
+
+.thumbnail {
+  width: calc(150px * 2);
+  height: calc(90px * 2);
+  object-fit: cover;
+  border-radius: 5px;
+  cursor: pointer;
+  border: 2px solid #004ec4;
+  transition: 0.2s;
+}
+
+.thumbnail:hover {
+  border-color: #007bff;
+}
