--- a/style.css
+++ b/style.css
@@ -570,7 +570,7 @@ main.content.active {
 }
 
 
-#googleLogin {
+.btn1 {
   display: inline-block;
   padding: 0.5em 1em;
   text-decoration: none;
@@ -580,7 +580,7 @@ main.content.active {
   font-weight: bold;
   box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.29);
 }
-#googleLogin:active {
+.btn1:active {
   box-shadow: inset 0 0 2px rgba(128, 128, 128, 0.1);
   transform: translateY(2px);
 }
