--- a/style.css
+++ b/style.css
@@ -84,10 +84,10 @@ body {
   height: 20px;
   cursor: pointer;
   position: absolute;
-  left: 20px;
-  top: 50%;
+  left: 10px;
+  top: 10px;
   transform: translateY(-50%);
-  z-index: 1000;
+  z-index: 9999;
 }
 
 .menu-toggle span {
