--- a/style.css
+++ b/style.css
@@ -91,25 +91,42 @@ body {
   z-index: 1000;
 }
 
+
 .menu-toggle span {
-  display: block;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 28px;
   height: 3px;
   background: #333;
   border-radius: 2px;
+  transform: translate(-50%, -50%);
   transition: all 0.3s ease;
 }
 
-/* バツ印アニメーション用 */
+.menu-toggle span:nth-child(1) {
+  transform: translate(-50%, -50%) rotate(0deg);
+}
+
+.menu-toggle span:nth-child(2) {
+  transform: translate(-50%, -50%) rotate(0deg);
+}
+
+.menu-toggle span:nth-child(3) {
+  transform: translate(-50%, -50%) rotate(0deg);
+}
+
+/* バツ印 */
 .menu-toggle.active span:nth-child(1) {
-  transform: rotate(45deg) translate(5px, 5px);
+  transform: translate(-50%, -50%) rotate(45deg);
 }
 
 .menu-toggle.active span:nth-child(2) {
-  opacity: 0; /* 真ん中の線は消す */
+  opacity: 0;
 }
 
 .menu-toggle.active span:nth-child(3) {
-  transform: rotate(-45deg) translate(5px, -5px);
+  transform: translate(-50%, -50%) rotate(-45deg);
 }
 
 @media (max-width: 900px) {
